feat(agent): finish

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter 字体 -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" xintegrity="sha384-n8MVd4RsNIU0KOVEMckMnTMPAkAbNiGkYMMgLOKWRbKnvo/bMO/chMoV2lL6hG4" crossorigin="anonymous">
     <style>
       /* 应用 Inter 字体到所有元素 */
       body {
